Fix header alignment

--- a/style.css
+++ b/style.css
@@ -1489,6 +1489,7 @@ a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
   text-align: center;
   white-space: nowrap;
 }
